fix panel scrollbars in the overflow menu

--- a/src/panel.css
+++ b/src/panel.css
@@ -1,7 +1,7 @@
 .wrapper {
   width: 380px;
   height: 220px;
-  box-shadow: 0 8px 40px rgba(0, 0, 0, .2);
+  margin: 0 auto;
 }
   
 .padding{
